--- a/src/assets/mixin.scss
+++ b/src/assets/mixin.scss
@@ -123,3 +123,191 @@ $grid-breakpoints: (
     }
   }
 }
+
+.col-12{
+  width: 100%;
+}
+
+/* Column width percentages */
+.col-sm-1 {
+  @include media-breakpoint-up(sm) {
+    width: 8.33%;
+  }
+}
+.col-sm-2 {
+  @include media-breakpoint-up(sm) {
+    width: 16.66%;
+  }
+}
+.col-sm-3 {
+  @include media-breakpoint-up(sm) {
+    width: 25%;
+  }
+}
+.col-sm-4 {
+  @include media-breakpoint-up(sm) {
+    width: 33.33%;
+  }
+}
+.col-sm-5 {
+  @include media-breakpoint-up(sm) {
+    width: 41.66%;
+  }
+}
+.col-sm-6 {
+  @include media-breakpoint-up(sm) {
+    width: 50%;
+  }
+}
+.col-sm-7 {
+  @include media-breakpoint-up(sm) {
+    width: 58.33%;
+  }
+}
+.col-sm-8 {
+  @include media-breakpoint-up(sm) {
+    width: 66.66%;
+  }
+}
+.col-sm-9 {
+  @include media-breakpoint-up(sm) {
+    width: 75%;
+  }
+}
+.col-sm-10 {
+  @include media-breakpoint-up(sm) {
+    width: 83.33%;
+  }
+}
+.col-sm-11 {
+  @include media-breakpoint-up(sm) {
+    width: 91.66%;
+  }
+}
+.col-sm-12 {
+  @include media-breakpoint-up(sm) {
+    width: 100%;
+  }
+}
+
+.col-md-1 {
+  @include media-breakpoint-up(md) {
+    width: 8.33%;
+  }
+}
+.col-md-2 {
+  @include media-breakpoint-up(md) {
+    width: 16.66%;
+  }
+}
+.col-md-3 {
+  @include media-breakpoint-up(md) {
+    width: 25%;
+  }
+}
+.col-md-4 {
+  @include media-breakpoint-up(md) {
+    width: 33.33%;
+  }
+}
+.col-md-5 {
+  @include media-breakpoint-up(md) {
+    width: 41.66%;
+  }
+}
+.col-md-6 {
+  @include media-breakpoint-up(md) {
+    width: 50%;
+  }
+}
+.col-md-7 {
+  @include media-breakpoint-up(md) {
+    width: 58.33%;
+  }
+}
+.col-md-8 {
+  @include media-breakpoint-up(md) {
+    width: 66.66%;
+  }
+}
+.col-md-9 {
+  @include media-breakpoint-up(md) {
+    width: 75%;
+  }
+}
+.col-md-10 {
+  @include media-breakpoint-up(md) {
+    width: 83.33%;
+  }
+}
+.col-md-11 {
+  @include media-breakpoint-up(md) {
+    width: 91.66%;
+  }
+}
+.col-md-12 {
+  @include media-breakpoint-up(md) {
+    width: 100%;
+  }
+}
+
+.col-lg-1 {
+  @include media-breakpoint-up(lg) {
+    width: 8.33%;
+  }
+}
+.col-lg-2 {
+  @include media-breakpoint-up(lg) {
+    width: 16.66%;
+  }
+}
+.col-lg-3 {
+  @include media-breakpoint-up(lg) {
+    width: 25%;
+  }
+}
+.col-lg-4 {
+  @include media-breakpoint-up(lg) {
+    width: 33.33%;
+  }
+}
+.col-lg-5 {
+  @include media-breakpoint-up(lg) {
+    width: 41.66%;
+  }
+}
+.col-lg-6 {
+  @include media-breakpoint-up(lg) {
+    width: 50%;
+  }
+}
+.col-lg-7 {
+  @include media-breakpoint-up(lg) {
+    width: 58.33%;
+  }
+}
+.col-lg-8 {
+  @include media-breakpoint-up(lg) {
+    width: 66.66%;
+  }
+}
+.col-lg-9 {
+  @include media-breakpoint-up(lg) {
+    width: 75%;
+  }
+}
+.col-lg-10 {
+  @include media-breakpoint-up(lg) {
+    width: 83.33%;
+  }
+}
+.col-lg-11 {
+  @include media-breakpoint-up(lg) {
+    width: 91.66%;
+  }
+}
+.col-lg-12 {
+  @include media-breakpoint-up(lg) {
+    width: 100%;
+  }
+}
