--- a/src/assets/anims.scss
+++ b/src/assets/anims.scss
@@ -1,14 +1,32 @@
 @keyframes morph {
-    0% {
+  0% {
     border-radius: 32% 30% 30% 23%/46% 36% 58% 50%;
-    }
-    25% {
+  }
+  25% {
     border-radius: 49% 21% 41% 25%/83% 53% 85% 41%;
-    }
-    75% {
+  }
+  75% {
     border-radius: 35% 31% 41% 31%/40% 44% 49% 30%;
-    }
-    100% {
+  }
+  100% {
     border-radius: 32% 30% 30% 23%/46% 36% 58% 50%;
-    }
+  }
+}
+
+@keyframes rotate-right {
+  0% {
+    transform: rotate(0turn);
+  }
+  100% {
+    transform: rotate(1turn);
+  }
+}
+
+@keyframes rmore-waving {
+  from {
+    background-position: -35px 50%;
+  }
+  to {
+    background-position: -990px 50%;
+  }
 }
