--- a/src/assets/fonts.scss
+++ b/src/assets/fonts.scss
@@ -1,32 +1,36 @@
 @font-face {
-    font-family: 'Poppins';
-    src: url('/fonts/Poppins-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Poppins';
-    src: url('/fonts/Poppins-Medium.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: 'Poppins';
-    src: url('/fonts/Poppins-Bold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: 'Poppins';
-    src: url('/fonts/Poppins-Italic.ttf') format('truetype'); /* No @ alias needed */
-    font-weight: normal;
-    font-style: italic;
-  }
-  
+  font-family: "Prompt";
+  src: url("/fonts/Prompt-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Prompt";
+  src: url("/fonts/Prompt-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
-  body {
-    font-family: 'Poppins', sans-serif;
-  }
-  
+@font-face {
+  font-family: "Prompt";
+  src: url("/fonts/Prompt-Bold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Prompt";
+  src: url("/fonts/Prompt-Italic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Krona one";
+  src: url("/fonts/KronaOne-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: "Prompt", sans-serif;
+}
