--- a/src/assets/mixin.scss
+++ b/src/assets/mixin.scss
@@ -4,48 +4,47 @@ $sides: (top, bottom, left, right); // Full names for sides
 $abbrv: (t, b, l, r); // Abbreviations for sides
 
 $spacers: (
-        "0": 0,
-        "4px": 4px,
-        "5px": 5px,
-        "8px": 8px,
-        "10px": 10px,
-        "15px": 15px,
-        "16px": 16px,
-        "20px": 20px,
-        "25px": 25px,
-        "30px": 30px,
-        "32px": 32px,
-        "35px": 35px,
-        "40px": 40px,
-        "45px": 45px,
-        "48px": 48px,
-        "50px": 50px,
-        "55px": 55px,
-        "60px": 60px,
-        "64px": 64px,
-        "65px": 65px,
-        "70px": 70px,
-        "75px": 75px,
-        "80px": 80px,
-        "85px": 85px,
-        "90px": 90px,
-        "95px": 95px,
-        "100px": 100px,
-        "130px": 130px,
-        auto: auto,
+  "0": 0,
+  "4px": 4px,
+  "5px": 5px,
+  "8px": 8px,
+  "10px": 10px,
+  "15px": 15px,
+  "16px": 16px,
+  "20px": 20px,
+  "25px": 25px,
+  "30px": 30px,
+  "32px": 32px,
+  "35px": 35px,
+  "40px": 40px,
+  "45px": 45px,
+  "48px": 48px,
+  "50px": 50px,
+  "55px": 55px,
+  "60px": 60px,
+  "64px": 64px,
+  "65px": 65px,
+  "70px": 70px,
+  "75px": 75px,
+  "80px": 80px,
+  "85px": 85px,
+  "90px": 90px,
+  "95px": 95px,
+  "100px": 100px,
+  "130px": 130px,
+  auto: auto,
 ) !default;
 
 $grid-breakpoints: (
-        xs: 0,
-        sm: 478px,
-        md: 768px,
-        lg: 992px,
-        xl: 1200px,
-        xxl: 1400px,
-        xxxl: 1600px,
-        fullhd: 1900px,
+  xs: 0,
+  sm: 478px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px,
+  xxxl: 1600px,
+  fullhd: 1900px,
 ) !default;
-
 
 @each $key, $value in $spacers {
   @each $side, $abbr in zip($sides, $abbrv) {
@@ -97,6 +96,10 @@ $grid-breakpoints: (
     $prev-key: nth($keys, $index - 1);
     $max-width: map-get($grid-breakpoints, $prev-key);
   }
+
+  @media (max-width: $max-width) {
+    @content;
+  }
 }
 
 @mixin media-breakpoint-only($breakpoint) {
@@ -124,7 +127,7 @@ $grid-breakpoints: (
   }
 }
 
-.col-12{
+.col-12 {
   width: 100%;
 }
 
