--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -18,6 +18,7 @@
   --primary: #c3b9ef;
   --additonal: "Krona one";
   --dark: #070707;
+  --text: #161a1d;
 }
 /*old*/
 $gray: #ccc;
@@ -27,11 +28,13 @@ $gray4: #eee;
 $black: #222222;
 $lightgrey: #f7f7f7;
 $orange: #e86c60;
+
 /*new*/
-$primary: #c3b9ef;
+$primary: #9d99f2;
 $secondary: #161a1d;
 $dark: #070707;
 $text: #161a1d;
+$text2: #515151;
 $accent: #c3b9ef;
 $yellow: #fff79a;
 $luna-orange: #ffa755;
@@ -65,7 +68,31 @@ section {
 }
 
 .container {
-  max-width: 1270px;
+  @media screen and (max-width: 480px) {
+    width: calc(90% + 30px);
+    max-width: 100%;
+  }
+
+  @media screen and (min-width: 481px) and (max-width: 600px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 601px) and (max-width: 767px) {
+    width: 590px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 992px) {
+    width: 738px;
+  }
+
+  @media screen and (min-width: 993px) and (max-width: 1200px) {
+    width: 980px;
+  }
+
+  @media screen and (min-width: 1201px) {
+    width: 100%;
+    max-width: 1200px;
+  }
   width: 100%;
   margin: 0 auto;
   display: flex;
@@ -74,6 +101,9 @@ section {
   flex-wrap: wrap;
   &-full {
     max-width: 100%;
+  }
+  &-big {
+    max-width: 1800px;
   }
 }
 
@@ -256,6 +286,11 @@ img {
     justify-content: flex-start;
   }
 }
+.justify-content-lg-between {
+  @include media-breakpoint-up(lg) {
+    justify-content: space-between;
+  }
+}
 
 .align-items-center {
   align-items: center;
@@ -365,22 +400,16 @@ img {
   }
 }
 .text-white {
-  color: white !important;
-}
-.text-gray {
-  color: $gray;
-}
-.text-gray2 {
-  color: $gray2;
-}
-.text-orange {
-  color: $orange;
+  color: white;
 }
 .text-black {
   color: $black;
 }
 .text-primary {
   color: $primary;
+}
+.text-gray {
+  color: $text2;
 }
 .orange-underline {
   position: relative;
@@ -417,8 +446,12 @@ img {
   display: inline-block;
   position: relative;
   padding: 10px 2px 8px;
+  font-size: 12px;
   border-radius: 8px;
   width: fit-content;
+  text-transform: uppercase;
+  font-family: "Krona One";
+  line-height: 1.3;
   &::before,
   &::after {
     content: "*";
@@ -459,9 +492,22 @@ img {
   }
 }
 .divider {
-  padding: 0px 5px 0px 5px;
-  color: inherit;
-  width: fit-content;
+  position: relative;
+  &::after {
+    content: "";
+    display: flex;
+    line-height: 0;
+    width: 1px;
+    height: 20px;
+    margin: 0 14px;
+    vertical-align: inherit;
+    background-color: dark;
+  }
+  &-dark {
+    &::after {
+      background-color: $text;
+    }
+  }
 }
 
 .cat-holder {
@@ -561,10 +607,86 @@ img {
   color: $orange;
 }
 
+//event globals
+
+.event-date {
+  font-family: var(--additonal);
+  font-weight: 400;
+  color: #505558;
+  font-size: 12px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+//button default
+
+.btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border: unset;
+  border-radius: 50px;
+  font-family: "Krona one";
+  font-size: 12px;
+  line-height: 1;
+  font-weight: 400;
+  color: white;
+  background-color: $text;
+  transition: 0.4s;
+  letter-spacing: 0;
+  z-index: 1;
+  &-md {
+    padding: 19px 25px;
+  }
+}
+
+.btn-hovprim {
+  &:hover {
+    background-color: $primary;
+  }
+}
+
+.btn-outline {
+  &::after {
+    position: absolute;
+    z-index: -1;
+    pointer-events: none;
+    top: -8px;
+    right: -8px;
+    bottom: -8px;
+    left: -8px;
+    border-radius: inherit;
+    transition: inherit;
+    opacity: 0;
+    transform: scale(0.9, 0.8) rotate(0);
+    border-radius: 32% 30% 30% 23%/46% 36% 58% 50%;
+    transform: scale(1, 1) rotate(2deg);
+    opacity: 1;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
+    border-color: #fff79a;
+    content: "";
+  }
+}
+.btn-white {
+  color: $text;
+  border-radius: 30px;
+  padding: 0 10px;
+  border: 2px solid $primary;
+  line-height: 24px;
+  background-color: transparent;
+  text-transform: uppercase;
+  &:hover {
+    background-color: $primary;
+  }
+}
+
 //morph btn
 
 .morph-btn {
   position: relative;
+  background-color: $text;
   &::after {
     //   --lunfest-button-border-rotate: 2deg;
     // --lunfest-button-border-offset: -14px;
@@ -592,6 +714,36 @@ img {
       opacity: 1;
       z-index: 0;
     }
+  }
+  &-yellow {
+    &::after {
+      border-color: $yellow;
+    }
+  }
+}
+
+.morph-outline {
+  &::after {
+    position: absolute;
+    z-index: -1;
+    pointer-events: none;
+    top: -8px;
+    right: -8px;
+    bottom: -8px;
+    left: -8px;
+    border-radius: inherit;
+    transition: inherit;
+    opacity: 1;
+    animation: morph 5s linear infinite;
+    animation-play-state: paused;
+    border-radius: 32% 30% 30% 23%/46% 36% 58% 50%;
+    animation-play-state: paused;
+    transform: scale(1, 1) rotate(2deg);
+    opacity: 1;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
+    border-color: $yellow;
+    content: "";
   }
 }
 
