--- a/src/assets/mixin.scss
+++ b/src/assets/mixin.scss
@@ -11,6 +11,7 @@ $spacers: (
   "10px": 10px,
   "15px": 15px,
   "16px": 16px,
+  "17px": 17px,
   "20px": 20px,
   "25px": 25px,
   "30px": 30px,
@@ -31,6 +32,7 @@ $spacers: (
   "90px": 90px,
   "95px": 95px,
   "100px": 100px,
+  "105px": 105px,
   "130px": 130px,
   auto: auto,
 ) !default;
