--- a/src/assets/anims.scss
+++ b/src/assets/anims.scss
@@ -30,3 +30,44 @@
     background-position: -990px 50%;
   }
 }
+
+@keyframes pop-char-out {
+  0%,
+  70%,
+  100% {
+    transform: translate(0em, 0em);
+  }
+  35% {
+    transform: translate(0.05em, -0.1em);
+  }
+}
+@keyframes pop-char-out2 {
+  0%,
+  70%,
+  100% {
+    transform: translate(0em, 0em);
+  }
+  35% {
+    transform: translate(0.025em, -0.05em);
+  }
+}
+@keyframes color-cycle {
+  0% {
+    color: rgba(255, 255, 255, 0);
+  }
+  15% {
+    color: var(--color-bg-text);
+  }
+  50% {
+    color: var(--color-text);
+  }
+  80% {
+    color: var(--color-text);
+  }
+  95% {
+    color: var(--color-bg-text);
+  }
+  100% {
+    color: rgba(255, 255, 255, 0);
+  }
+}
