--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -19,6 +19,7 @@
   --additonal: "Krona one";
   --dark: #070707;
   --text: #161a1d;
+  --yellow: #fff79a;
 }
 /*old*/
 $gray: #ccc;
@@ -43,7 +44,7 @@ $n-gray: #babac0;
 body {
   font-weight: 400;
   font-size: 16px;
-  line-height: 23px;
+  line-height: 30px;
   letter-spacing: 0px;
   color: $text;
   margin: 0;
@@ -170,6 +171,9 @@ h6 {
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
+  font-weight: 500;
+  font-family: "Prompt";
+  color: $text;
 }
 h1 {
 }
