--- a/src/assets/fonts.scss
+++ b/src/assets/fonts.scss
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "Prompt";
   src: url("/fonts/Prompt-Regular.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Prompt";
   src: url("/fonts/Prompt-Medium.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 500;
   font-style: normal;
 }
 
