--- a/src/assets/mixin.scss
+++ b/src/assets/mixin.scss
@@ -33,6 +33,7 @@ $spacers: (
   "95px": 95px,
   "100px": 100px,
   "105px": 105px,
+  "120px": 120px,
   "130px": 130px,
   auto: auto,
 ) !default;
