--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -103,6 +103,9 @@ section {
   &-full {
     max-width: 100%;
   }
+  &-small{
+    max-width: 1200px;
+  }
   &-big {
     max-width: 1800px;
   }
@@ -186,6 +189,10 @@ h4 {
 h5 {
 }
 h6 {
+  font-size: 24px;
+  letter-spacing: normal;
+  line-height: 36px;
+  
 }
 
 ul {
@@ -489,6 +496,11 @@ img {
       color: $primary !important;
     }
   }
+  &-none{
+    &:hover{
+      color: none;
+    }
+  }
   &-underline {
     &:hover {
       text-decoration: underline;
@@ -497,6 +509,9 @@ img {
 }
 .divider {
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   &::after {
     content: "";
     display: flex;
@@ -504,14 +519,25 @@ img {
     width: 1px;
     height: 20px;
     margin: 0 14px;
-    vertical-align: inherit;
-    background-color: dark;
+    position: relative;
+    
   }
   &-dark {
     &::after {
       background-color: $text;
     }
   }
+}
+.divider-star{
+  &::after{
+    height: auto;
+    content:'*';
+    top: 5px;
+    right: 2px;
+    font-size: 20px;
+    color: $yellow;
+  }
+    
 }
 
 .cat-holder {
@@ -690,7 +716,6 @@ img {
 
 .morph-btn {
   position: relative;
-  background-color: $text;
   &::after {
     //   --lunfest-button-border-rotate: 2deg;
     // --lunfest-button-border-offset: -14px;
@@ -788,6 +813,32 @@ img {
       opacity: 1;
       right: 0;
       transition: all 0.6s ease-out;
+    }
+  }
+}
+
+
+//breadcrumbs
+
+.bcrumb{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  a{
+    @extend .read-more;
+    color: inherit;
+    &::after{
+      background-image: url(('data:image/svg+xml; utf8, %3Csvg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 1200 10" style="enable-background:new 0 0 1200 10;" xml:space="preserve" preserveAspectRatio="none" fill="transparent" stroke="%23FFF79A" stroke-width="2px"%3E%3Cpath d="M0,2.6l2.2,0.6C4.3,3.8,8.7,5,12.8,5.7c4.2,0.7,8.7,1,12.8,0.4c4.2-0.6,8.3-2.1,12.8-2.8c4.2-0.7,8.3-0.7,12.9-0.9c4.2-0.2,8.3-0.4,12.8-0.1c4.1,0.3,8.3,1.2,12.8,2.2c4.1,1,8.3,2.2,12.5,2.6c4.5,0.4,8.7,0.2,12.8-0.6c4.4-0.7,8.7-1.9,12.9-1.6c4.4,0.3,8.7,2,12.8,2.6c4.3,0.6,8.7,0,12.8-0.4c4.3-0.4,8.7-0.7,12.9-0.6c4.3,0.1,8.7,0.7,12.8,1.2c4.3,0.4,8.7,0.7,12.8,0.7c4.2,0,8.7-0.3,12.8-0.3c4.2,0,8.3,0.3,12.9,0c4.2-0.3,8.3-1.2,12.8-2.1c4.2-0.9,8.3-1.8,12.8-1.5c4.1,0.3,8.3,1.8,12.8,2.5c4.1,0.7,8.3,0.7,12.5,0.2c4.5-0.6,8.7-1.8,12.8-2.6c4.4-0.9,8.7-1.5,12.9-0.7c4.4,0.7,8.7,2.8,12.8,3.1c4.3,0.3,8.7-1.2,12.9-1.8c4.3-0.6,8.7-0.3,12.8,0.3c4.3,0.6,8.7,1.5,12.8,0.9c4.3-0.6,8.7-2.6,12.8-2.8c4.2-0.1,8.7,1.6,12.9,1.8c4.2,0.2,8.3-1.3,12.8-1.2c4.2,0.1,8.3,1.9,12.8,2.2c4.2,0.3,8.3-0.9,12.9-2.1c4.1-1.2,8.3-2.3,12.8-2.6c4.1-0.3,8.3,0.3,12.5,0.9c4.4,0.6,8.7,1.2,12.9,1c4.4-0.1,8.7-1,12.8-1c4.4,0,8.7,0.9,12.9,2c4.3,1.2,8.7,2.6,12.8,3.1c4.3,0.4,8.7-0.2,12.8-0.6c4.3-0.4,8.7-0.7,10.8-0.8l2.1-0.1c8.4-0.4,17-2.4,25-3.5c16.9-2.3,32,2,49,4c4,0,7,0,11,0c5-1,9-3,14-2c12,4,24,3,36,1c27,5,53,1,80,0c5,0,11,1,16,2c3,0,5,0,8,0c7-2,13-4,20-4c5,1,11,2,16,2c11,1,22-1,33,0c3,0,5,1,8,1c4-1,7-3,11-2c10,0,20,1,30,0c12,4,23-1,35-3c3,0,5,0,8,0c4,1,9,1,13,2c7,1,13.1-2.5,20-1c9.1,1.9,18,3,27,5c7,1,14.8,0.3,22-1.5c5.1-1.3,9-2.2,12.5-2.8c4.2-0.7,8.3-0.7,12.9-0.9c4.2-0.2,8.3-0.4,12.8-0.1c4.1,0.3,8.3,1.2,12.8,2.2c4.1,1,8.3,2.2,12.5,2.6c4.4,0.4,8.7,0.2,12.8-0.6c4.4-0.7,8.7-1.9,12.9-1.6c4.4,0.3,8.7,2,12.8,2.6c4.3,0.6,8.7,0,12.8-0.4c4.3-0.4,8.7-0.7,12.9-0.6c4.3,0.1,8.7,0.7,12.8,1.2c4.3,0.4,8.7,0.7,12.8,0.7c4.2,0,8.7-0.3,12.8-0.3c4.2,0,8.3,0.3,12.8,0c4.2-0.3,8.3-1.2,12.9-2.1c4.2-0.9,8.3-1.8,12.8-1.5c4.1,0.3,8.3,1.8,12.8,2.5"/%3E%3C/svg%3E'));
+    }
+    .bcrumb-divider{
+
+    }
+    &.bcrumb__cur{
+      &::after{
+        opacity: 1;
+        right: 0;
+        animation: none;
+      }
     }
   }
 }
